Fixed image size alignment

--- a/src/app/_features/email-template/components/kii-email-editor/kii-email-editor.component.scss
+++ b/src/app/_features/email-template/components/kii-email-editor/kii-email-editor.component.scss
@@ -1,6 +1,5 @@
 .kii-email-editor-wrp {
     min-height: 100px;
-    max-width: 600px;
     .kii-email {
         width:100%;
         min-height: 100px;
